# agent-world-model

./: .gitmodules  README.md  pyproject.toml
awm/: cli.py
awm/eval/: __init__.py  infer_eval.py
