[project]
name = "agent-world-model"
version = "0.1.0"
description = "Agent World Model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "fastapi-mcp==0.4.0",
    "json-repair>=0.56.0",
    "loguru>=0.7.3",
    "mcp-agent==0.2.6",
    "numpy>=2.4.2",
    "openai>=2.17.0",
    "orjson>=3.11.7",
    "simpleargparser>=0.2.2",
    "sqlalchemy==2.0.41",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
# `bench` extra: also installs mcp-adapted-bench (from the submodule),
# which itself pulls in BFCL / τ²-bench / MCP-Universe
bench = [
    "mcp-adapted-bench",
]

[tool.uv.sources]
mcp-adapted-bench = { path = "mcp-adapted-bench", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["awm"]

[project.scripts]
awm = "awm.cli:main"
